Fixed valign and text updates

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -7,7 +7,7 @@ body {
 a {
   color: @branding-color;
 
-  &:hover{
+  &:hover {
     color: darken(@branding-color, 10%);
   }
 }
@@ -51,6 +51,20 @@ body.homepage {
   }
   section {
     margin-bottom: 32px;
+    & > div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .img-valign {
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
+      img {
+        vertical-align: middle;
+      }
+    }
 
     &.inverted {
       color: white;
@@ -60,6 +74,14 @@ body.homepage {
     }
 
     &.img-text {
+      .img-valign {
+        flex: 1;
+        width: 33.3%;
+      }
+      .text {
+        flex: 2;
+        width: 66%;
+      }
       img {
         box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2);
       }
